--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>El Pollo Loco</title>
+    <script src="models/movable-object.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/cloud.class.js"></script>
+    <script src="models/background-object.class.js"></script>
+    <script src="models/world.class.js"></script>
+    <script src="models/keyboard.class.js"></script>
+    <script src="models/level.class.js"></script>
+    <script src="models/level1.js"></script>
+    <script src="models/endboss.class.js"></script>
+    <script src="js/game.js"></script>
 </head>
-<body>
+<body onload="init()">
     <h1>El pollo loco</h1>
 
-    <canvas width="720" height="480"></canvas>
+    <canvas id="canvas" width="720" height="480"></canvas>
 </body>
 </html>
