--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>El Pollo Loco</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/10_favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/10_favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <!-- <link rel="manifest" href="/img/favicon/site.webmanifest"> -->
     <script src="models/movable-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/character.class.js"></script>
