--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/10_favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <!-- <link rel="manifest" href="/img/favicon/site.webmanifest"> -->
+    <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/character.class.js"></script>
@@ -19,6 +20,7 @@
     <script src="models/world.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/endboss.class.js"></script>
+    <script src="models/status-bar.class.js"></script>
     <script src="models/level1.js"></script>
     <script src="js/game.js"></script>
 </head>
