--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <script src="js/game.js"></script>
 </head>
 <body onload="init()">
+  <div id="fullscreen">
     <h1>El pollo loco</h1>
 
     <canvas id="canvas" width="720" height="480"></canvas>
+  </div>
 </body>
 </html>
