--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="models/world.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/endboss.class.js"></script>
-    <script src="models/thowable-object.class.js"></script>
+    <script src="models/throwable-object.class.js"></script>
     <script src="models/level1.js"></script>
     <script src="js/game.js"></script>
 </head>
