--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="models/character.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/chicken.class.js"></script>
+    <script src="models/small-chicken.class.js"></script>
     <script src="models/collectable-object.class.js"></script>
     <script src="models/status-bar.class.js"></script>
     <script src="models/cloud.class.js"></script>
