--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>El Pollo Loco</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="img/10_favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/10_favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/10_favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/10_favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon/favicon-16x16.png"
+    />
     <!-- <link rel="manifest" href="/img/favicon/site.webmanifest"> -->
     <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
@@ -26,10 +40,17 @@
     <script src="models/throwable-object.class.js"></script>
     <script src="models/level1.js"></script>
     <script src="js/game.js"></script>
-</head>
-<body onload="init()">
-    <h1>El pollo loco</h1>
+  </head>
+  <body onload="init()">
+    <section class="background">
+      <h1>El pollo loco</h1>
 
-    <canvas id="canvas" width="720" height="480"></canvas>
-</body>
+      <canvas id="canvas" width="720" height="480"></canvas>
+      <div class="instruction">
+        <div class="col-1">Walk : <= | =></div>
+        <div class="col-1">Jump : Space</div>
+        <div class="col-1">D: Attack</div>
+      </div>
+    </section>
+  </body>
 </html>
