--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@
     <script src="models/level1.js"></script>
     <script src="js/game.js"></script>
   </head>
-  <body onload="init()">
+  <body>
     <section class="background">
       <h1>El pollo loco</h1>
-
+      <div id="startScreen" class="startscreen-div">
+        <div class="startscreen-img">
+          <button onclick="init()">Start Game</button>
+          <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="">
+        </div> 
+      </div>
+      <!-- <div id="endScreen" class="startscreen"><img src="img/9_intro_outro_screens/start/startscreen_1.png" alt=""></div>  -->
       <canvas id="canvas" width="720" height="480"></canvas>
       <div class="instruction">
         <div class="col-1">Walk : <= | =></div>
