--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div> 
       </div>
       <!-- <div id="endScreen" class="startscreen"><img src="img/9_intro_outro_screens/start/startscreen_1.png" alt=""></div>  -->
-      <canvas id="canvas" width="720" height="480"></canvas>
+      <canvas id="canvas" class="d-none" width="720" height="480"></canvas>
       <div class="instruction">
         <div class="col-1">Walk : <= | =></div>
         <div class="col-1">Jump : Space</div>
