EPL sound bugfix and styling

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   <body>
     <section class="background">
       <h1>El pollo loco</h1>
+      
       <div id="startScreen" class="startscreen-div">
-        <div id="mute" class="btn" onclick="toggleMute()">
+        <div id="fullscreen-button" class="btn-fullscreen" alt="Toggle Fullscreen" onclick="toggleFullscreen()" style="background-image: url('./img/12_icons/fullscreen_open.svg')"></div>
+                <div id="mute" class="btn" onclick="toggleMute()">
           <img id="muteIcon" src="./img/12_icons/sound_on.svg" alt="" />
         </div>
         <div class="startscreen-img">
