--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
   <body>
     <section class="background">
       <h1>El pollo loco</h1>
-      
+    <div class="game-container">
+      <div id="mute" class="btn" onclick="toggleMute()">
+        <img id="muteIcon" src="./img/12_icons/sound_on.svg" alt="" />
+      </div>
       <div id="startScreen" class="startscreen-div">
-                <div id="mute" class="btn" onclick="toggleMute()">
-          <img id="muteIcon" src="./img/12_icons/sound_on.svg" alt="" />
-        </div>
+        
         <div class="startscreen-img">
           <button onclick="init()">Start Game</button>
           <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
@@ -76,6 +77,7 @@
         <div class="col-1">Jump: Space</div>
         <div class="col-1">D: Attack</div>
       </div>
+    </div>
     </section>
   </body>
 </html>
