--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
         <div id="winGameScreen" class="startscreen-div d-none">
           <div class="startscreen-img">
             <button onclick="restartGame()">Restart</button>
+           <H2>WIN</H2> 
             <!-- <img src="img/9_intro_outro_screens/winGame/winGame.jpg" alt=""> -->
           </div>
         </div>
         <div id="gameOverScreen" class="startscreen-div d-none">
           <div class="startscreen-img">
             <button onclick="restartGame()">Restart</button>
-            <img src="img/9_intro_outro_screens/game_over/game over!.png" alt="" />
+            <img src="img/9_intro_outro_screens/game_over/oh no you lost!.png" alt="" />
           </div>
         </div>
         <canvas id="canvas" class="d-none" width="720" height="480"></canvas>
