EPL adding slide in slide out popup

--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@
             </div>
           </div>
           </div>
-
-         
         <div id="startScreen" class="startscreen-div">
           <div class="startscreen-img">
             <div class="flex-container">
@@ -64,10 +62,12 @@
               <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
             </div>
             <div id="popupIntroText" class="popup-intro-text">
-              <div class="close-div">
-                <img class="btn-close" src="img/12_icons/close.svg" alt="">
-                Willkommen zu "Pepe's Hühnerjagd"! In diesem actiongeladenen Spiel schlüpfst du in die Rolle von Pepe, einem mutigen Helden mit einem wichtigen Ziel: die Welt vor dem großen, bösen Hühnchen zu retten.
+              <img id="imageChange" onclick="popupToggle()" class="btn-close" src="./img/12_icons/info.svg" alt="">
+              <div id="popupContent" class="popup-content">
+                <h3>Willkommen zu "Pepe's Hühnerjagd"!</h3>
+                <br> In diesem actiongeladenen Spiel schlüpfst du in die Rolle von Pepe, einem mutigen Helden mit einem wichtigen Ziel: die Welt vor dem großen, bösen Hühnchen zu retten.
               </div>
+
             </div>
           </div>
         </div>
