EPL adding keyboard

--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
               <button onclick="init()">Start Game</button>
               <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
             </div>
-            <div id="popupIntroText" class="popup-intro-text">
-              <img id="imageChange" onclick="popupToggle()" class="btn-close" src="./img/12_icons/info.svg" alt="">
-              <div id="popupContent" class="popup-content">
+            <div id="popupIntroTextFirst" class="popup-intro-text">
+              <img id="imageChangeFirst" onclick="popupToggleFirst()" class="btn-close" src="./img/12_icons/info.svg" alt="">
+              <div id="popupContentFirst" class="popup-content-first">
                 <h3>Willkommen zu "Pepe's Hühnerjagd"!</h3>
                 <br> In diesem actiongeladenen Spiel schlüpfst du in die Rolle von Pepe, einem mutigen Helden mit einem wichtigen Ziel: die Welt vor dem großen, bösen Hühnchen zu retten.
+              </div>
+
+            </div>
+            <div id="popupIntroTextSecond" class="popup-intro-text">
+              <img id="imageChangeSecond" onclick="popupToggleSecond()" class="btn-close-second" src="./img/12_icons/book.svg" alt="">
+              <div id="popupContentSecond" class="popup-content-second">
+               Test
               </div>
 
             </div>
