--- a/index.html
+++ b/index.html
@@ -47,38 +47,64 @@
       <div class="game-container">
         <div class="btn-container">
           <div class="btn-flex">
+            <div id="infoBtn" class="btn" onclick="">
+              <img src="./img/12_icons/info.svg" alt="" />
+            </div>
             <div id="mute" class="btn btn-mute" onclick="toggleMute()">
               <img id="muteIcon" src="./img/12_icons/sound_on.svg" alt="" />
             </div>
           </div>
-          </div>
+        </div>
         <div id="startScreen" class="startscreen-div">
           <div class="startscreen-img">
             <div class="flex-container">
               <button onclick="init()">Start Game</button>
-              <img src="img/9_intro_outro_screens/start/startscreen_1.png" alt="" />
+              <img
+                src="img/9_intro_outro_screens/start/startscreen_1.png"
+                alt=""
+              />
             </div>
             <div id="popupIntroTextFirst" class="popup-intro-text">
-              <img id="imageChangeFirst" onclick="popupToggleFirst()" class="btn-close" src="./img/12_icons/info.svg" alt="">
+              <img
+                id="imageChangeFirst"
+                onclick="popupToggleFirst()"
+                class="btn-close"
+                src="./img/12_icons/info.svg"
+                alt=""
+              />
               <div id="popupContentFirst" class="popup-content-first">
                 <h3>Willkommen zu "Pepe's Hühnerjagd"!</h3>
-                <br> In diesem actiongeladenen Spiel schlüpfst du in die Rolle von Pepe, einem mutigen Helden mit einem wichtigen Ziel: die Welt vor dem großen, bösen Hühnchen zu retten.
+                <br />
+                In diesem actiongeladenen Spiel schlüpfst du in die Rolle von
+                Pepe, einem mutigen Helden mit einem wichtigen Ziel: die Welt
+                vor dem großen, bösen Hühnchen zu retten.
               </div>
-
             </div>
             <div id="popupIntroTextSecond" class="popup-intro-text">
-              <img id="imageChangeSecond" onclick="popupToggleSecond()" class="btn-close-second" src="./img/12_icons/book.svg" alt="">
+              <img
+                id="imageChangeSecond"
+                onclick="popupToggleSecond()"
+                class="btn-close-second"
+                src="./img/12_icons/book.svg"
+                alt=""
+              />
               <div id="popupContentSecond" class="popup-content-second">
-               Test
+                <h3>test</h3>
+                <div class="instruction-popup">
+                  <div class="instruction-popup-item"><img src="./img/12_icons/left_arrow.png" alt=""><strong>Left Arrow:</strong> Move Left</div>
+                  <div class="instruction-popup-item"><img src="./img/12_icons/right_arrow.png" alt=""><strong>Right Arrow:</strong> Move Right</div>
+                  <div class="instruction-popup-item"><img src="./img/12_icons/space.png" alt=""><strong>Space Bar:</strong> Jump</div>
+                  <div class="instruction-popup-item"><img src="./img/12_icons/d_button.png" alt=""><strong>D:</strong> Attack</div>
+                </div>
+                </div>
               </div>
-
             </div>
           </div>
         </div>
         <div id="winGameScreen" class="startscreen-div d-none">
           <div class="startscreen-img">
             <button onclick="restartGame()">Restart</button>
-           <H2>WIN</H2> 
+            <h2>WIN</h2>
           </div>
         </div>
         <div id="gameOverScreen" class="startscreen-div d-none">
@@ -87,7 +113,10 @@
               <button onclick="backToMenu()">Back to Menu</button>
               <button onclick="restartGame()">Restart</button>
             </div>
-            <img src="img/9_intro_outro_screens/game_over/oh no you lost!.png" alt="" />
+            <img
+              src="img/9_intro_outro_screens/game_over/oh no you lost!.png"
+              alt=""
+            />
           </div>
         </div>
         <canvas id="canvas" class="d-none" width="720" height="480"></canvas>
