adding image for mobile and delete js files in impressum

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="game-container">
         <div class="btn-container">
           <div class="btn-flex">
-            <div id="infoBtn" class="btn" onclick="">
+            <div id="infoBtn" class="btn">
               <a href="imprint.html" target="_blank">
                 <img src="./img/12_icons/link.svg" alt="" />
               </a>
@@ -102,6 +102,10 @@
                     <div class="instruction-popup-item"><img src="./img/12_icons/d_button.png" alt="">Attack</div>
                     <div class="instruction-popup-item"><img src="./img/12_icons/space.png" alt="">Jump</div>
                 </div>
+              </div>
+              <div class="turnScreenBox" id="turnScreen">
+                <img class="turnScreenIcon" src="./img/12_icons/turn-device.png" alt="">
+                <p>Turn Device</p>
               </div>
                 </div>
               </div>
