Responsive fix try

--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
     <script src="js/game.js"></script>
   </head>
   <body>
-    <div class="background-overlay"></div>
-    <div class="overlayMobile">
+ <!--    <div class="overlayMobile">
     <div class="turnScreenBox" id="turnScreen">
       <img class="turnScreenIcon" src="./img/12_icons/turn-device.png" alt="">
       <p>Please rotate your device into landscape mode</p>
+    </div> -->
     </div>
-    </div>
-    <section class="background">
       <h1>El Pollo Loco</h1>
       <div class="game-container">
         <div class="btn-container">
@@ -138,6 +136,5 @@
         </div>
         
       </div>
-    </section>
   </body>
 </html>
