--- a/index.html
+++ b/index.html
@@ -23,23 +23,7 @@
       sizes="16x16"
       href="img/favicon/favicon-16x16.png"
     />
-    <!-- <link rel="manifest" href="/img/favicon/site.webmanifest"> -->
-    <script src="models/drawable-object.class.js"></script>
-    <script src="models/movable-object.class.js"></script>
-    <script src="models/character.class.js"></script>
-    <script src="models/keyboard.class.js"></script>
-    <script src="models/chicken.class.js"></script>
-    <script src="models/small-chicken.class.js"></script>
-    <script src="models/collectable-object.class.js"></script>
-    <script src="models/status-bar.class.js"></script>
-    <script src="models/cloud.class.js"></script>
-    <script src="models/background-object.class.js"></script>
-    <script src="models/world.class.js"></script>
-    <script src="models/level.class.js"></script>
-    <script src="models/endboss.class.js"></script>
-    <script src="models/throwable-object.class.js"></script>
-    <script src="models/level1.js"></script>
-    <script src="js/game.js"></script>
+
   </head>
   <body>
  <!--    <div class="overlayMobile">
@@ -133,8 +117,34 @@
           </div>
           
           <canvas id="canvas" class="d-none" width="720" height="480"></canvas>
+          <div class="btn-mobile-wrapper">
+            <div class="btn-mobile-flex">
+              <img class="btn-mobile" id="btnLeft" src="./img/12_icons/left.png" alt="">
+              <img class="btn-mobile" id="btnRight" src="./img/12_icons/right.png" alt="">
+            </div>
+            <div class="btn-mobile-flex">
+              <img class="btn-mobile" id="btnJump" src="./img/12_icons/up.png" alt="">
+              <img class="btn-mobile" id="btnThrow" src="./img/12_icons/attack.png" alt="">
+            </div>
+          </div>
         </div>
         
       </div>
   </body>
+  <script src="models/drawable-object.class.js"></script>
+  <script src="models/movable-object.class.js"></script>
+  <script src="models/character.class.js"></script>
+  <script src="models/chicken.class.js"></script>
+  <script src="models/small-chicken.class.js"></script>
+  <script src="models/collectable-object.class.js"></script>
+  <script src="models/status-bar.class.js"></script>
+  <script src="models/cloud.class.js"></script>
+  <script src="models/background-object.class.js"></script>
+  <script src="models/world.class.js"></script>
+  <script src="models/level.class.js"></script>
+  <script src="models/endboss.class.js"></script>
+  <script src="models/throwable-object.class.js"></script>
+  <script src="models/level1.js"></script>
+  <script src="models/keyboard.class.js"></script>
+  <script src="js/game.js"></script>
 </html>
