adding loading screen

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </div>
       <h1>El Pollo Loco</h1>
       <div class="game-container">
+        <div id ="loadingScreen" class="loader-container hide">
+          <img src="img/3_enemies_chicken/chicken_small/1_walk/1_w.png" alt="Loading..." class="spinner">
+        </div>
         <div class="btn-container">
           <div class="btn-flex">
             <div id="infoBtn" class="btn">
@@ -50,7 +53,7 @@
         <div id="startScreen" class="startscreen-div">
           <div class="startscreen-img">
             <div class="flex-container">
-              <button onclick="init()">Start Game</button>
+              <button onclick="startGame()">Start Game</button>
               <img
                 src="img/9_intro_outro_screens/start/startscreen_1.png"
                 alt=""
