--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             </div>
           </div>
           <div id="winGameScreen" class="startscreen-div d-none">
-            <div class="startscreen-img">
+            <div class="btn-container-restart">
+              <button onclick="backToMenu()">Back to Menu</button>
               <button onclick="restartGame()">Restart</button>
               <h2>WIN</h2>
             </div>
