--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   </head>
   <body>
- <!--    <div class="overlayMobile">
+    <div class="overlayMobile">
     <div class="turnScreenBox" id="turnScreen">
       <img class="turnScreenIcon" src="./img/12_icons/turn-device.png" alt="">
       <p>Please rotate your device into landscape mode</p>
-    </div> -->
+    </div>
     </div>
       <h1>El Pollo Loco</h1>
       <div class="game-container">
