--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
         </div>
         <div id="startScreen" class="startscreen-div">
           <div class="startscreen-img">
-            <div class="flex-container">
-              <button onclick="startGame()">Start Game</button>
+            <div class="startscreen-wrapper-img">
               <img
                 src="img/9_intro_outro_screens/start/startscreen_1.png"
                 alt=""
               />
+          </div>
+            <div class="flex-container">
+              <button onclick="startGame()">Start Game</button>
             </div>
             <div id="popupIntroTextFirst" class="popup-intro-text">
               <img
