change win image

--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
             <div class="btn-container-restart">
               <button onclick="backToMenu()">Back to Menu</button>
               <button onclick="restartGame()">Restart</button>
-              <h2>WIN</h2>
+              <img
+                src="img/9_intro_outro_screens/winGame/win.png"
+                alt=""
+              />
             </div>
           </div>
           <div id="gameOverScreen" class="startscreen-div d-none">
