bugfix mobile btns

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           
           <canvas id="canvas" class="d-none" width="720" height="480"></canvas>
-          <div class="btn-mobile-wrapper">
+          <div id="btnMobileWrapper" class="btn-mobile-wrapper">
             <div class="btn-mobile-flex">
               <img class="btn-mobile" id="btnJump" src="./img/12_icons/up.png" alt="">
               <img class="btn-mobile" id="btnThrow" src="./img/12_icons/attack.png" alt="">
